--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "8.2.6",
     "babel-loader": "7.1.5",
     "babel-polyfill": "6.26.0",
