--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,20 @@
 language: node_js
 node_js:
   - "node"
-branches:
-  only:
-  - master
+cache:
+  directories:
+    - "node_modules"
+script: yarn test && yarn build
+before_deploy: yarn add now
+deploy:
+  - provider: script
+    script: now ./dist --token $NOW_TOKEN
+    skip_cleanup: true
+    on:
+      all_branches: true
+      master: false
+  - provider: script
+    script: now ./dist --token $NOW_TOKEN && now alias -a ./dist/now.json --token $NOW_TOKEN
+    skip_cleanup: true
+    on:
+      master: true
