--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "4.3.1",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0",
+    "release-it": "^8.2.0",
     "styled-components": "3.3.3"
   },
   "devDependencies": {
@@ -46,7 +47,7 @@
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>client/jest.config.js"
   },
-  "engines" : { 
-    "node" : ">=8.11.4" 
+  "engines": {
+    "node": ">=8.11.4"
   }
 }
