--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   },
   "dependencies": {
     "axios": "0.18.0",
-    "connected-react-router": "5.0.1",
+    "connected-react-router": "^5.0.1",
     "history": "^4.7.2",
-    "react": "16.4.2",
+    "react": "^15.5.4 || ^16.0.0",
     "react-dom": "16.4.2",
-    "react-redux": "5.0.7",
+    "react-redux": "^4.4.8 || ^5.0.7",
+    "react-router": "^4.3.1",
     "react-router-config": "1.0.0-beta.4",
     "react-router-dom": "4.3.1",
-    "redux": "4.0.1",
+    "redux": "^3.6.0 || ^4.0.0",
     "redux-thunk": "2.3.0",
     "styled-components": "3.3.3"
   },
@@ -29,10 +30,13 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "8.2.6",
     "babel-loader": "7.1.5",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-airbnb": "2.5.2",
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
     "eslint": "5.1.0",
     "eslint-config-google": "0.9.1",
     "eslint-plugin-import": "2.13.0",
@@ -40,15 +44,12 @@
     "eslint-plugin-react": "7.10.0",
     "jest": "23.4.2",
     "parcel-bundler": ">=1.10.3",
-    "prettier": "1.13.7",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.7.0"
+    "prettier": "1.13.7"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>client/jest.config.js"
   },
-  "engines" : { 
-    "node" : ">=8.11.4" 
+  "engines": {
+    "node": ">=8.11.4"
   }
 }
