--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-router-dom": "4.3.1",
     "redux": "^3.6.0 || ^4.0.0",
     "redux-thunk": "2.3.0",
-    "styled-components": "3.3.3"
+    "styled-components": "^4.1.2"
   },
   "devDependencies": {
     "@babel/cli": "7.1.2",
