--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "concrete-git",
+  "name": "gitao",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Cesar de Barros <cbsorrilha@hotmail.com>",
@@ -9,12 +9,13 @@
     "start": "parcel ./client/index.html",
     "inspect": "yarn lint && yarn test",
     "lint": "eslint --ignore-pattern node_modules client",
-    "test": "jest"
+    "test": "jest",
+    "docz:dev": "docz dev",
+    "docz:build": "docz build"
   },
   "dependencies": {
     "axios": "0.18.0",
-    "connected-react-router": "^5.0.1",
-    "history": "^4.7.2",
+    "prop-types": "^15.6.2",
     "react": "^15.5.4 || ^16.0.0",
     "react-dom": "16.4.2",
     "react-redux": "^4.4.8 || ^5.0.7",
@@ -26,15 +27,22 @@
     "styled-components": "3.3.3"
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "8.2.6",
-    "babel-loader": "7.1.5",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-airbnb": "2.5.2",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-react": "6.24.1",
+    "@babel/cli": "7.1.2",
+    "@babel/core": "7.1.2",
+    "@babel/node": "7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@babel/polyfill": "7.0.0",
+    "@babel/preset-env": "7.1.0",
+    "@babel/preset-react": "7.0.0",
+    "@babel/register": "7.0.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "10.0.1",
+    "babel-jest": "23.6.0",
+    "babel-loader": "8.0.4",
+    "babel-plugin-add-module-exports": "1.0.0",
+    "babel-plugin-styled-components": "1.8.0",
+    "babel-preset-airbnb": "2.6.0",
+    "docz": "^0.12.15",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
     "eslint": "5.1.0",
